Add header text of chart

--- a/src/app.css
+++ b/src/app.css
@@ -36,4 +36,12 @@
   background-color: aqua;
 }
 
+.heading1{
+    text-align: center;
+    color: #ff0000;
+    text-decoration: underline;
+}
+.heading1 span{
+  background-color: #ffff00; 
+}
 
